--- a/src/pages/reset-password/reset-password.html
+++ b/src/pages/reset-password/reset-password.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      Reset Password
+      {{ 'RESET_PASSWORD.TITLE' | translate }}
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -11,16 +11,16 @@
   <form [formGroup]="resetPasswordForm" (submit)="resetPassword()" novalidate>
 
     <ion-item>
-      <ion-label stacked>Email</ion-label>
-      <ion-input formControlName="email" type="email" placeholder="Your email address"
+      <ion-label stacked>{{ 'RESET_PASSWORD.EMAIL.TITLE' | translate }}</ion-label>
+      <ion-input formControlName="email" type="email" placeholder={{emailPlaceholder}}
         [class.invalid]="!resetPasswordForm.controls.email.valid && resetPasswordForm.controls.email.dirty"></ion-input>
     </ion-item>
     <ion-item class="error-message" *ngIf="!resetPasswordForm.controls.email.valid  && resetPasswordForm.controls.email.dirty">
-      <p>Please enter a valid email.</p>
+      <p>{{ 'RESET_PASSWORD.EMAIL.VALID' | translate }}</p>
     </ion-item>
 
     <button ion-button block type="submit">
-      Reset your Password
+      {{ 'RESET_PASSWORD.RESET' | translate }}
     </button>
 
   </form>
