--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -52,7 +52,7 @@
           text-overflow: ellipsis;
           white-space: normal;
           ">
-          Collect coins in your favorite shops and be rewarded for your loyalty.
+          {{ 'WELCOME.TITLE' | translate }}
         </h2>
       </div>
     </ion-col>
@@ -90,7 +90,7 @@
       margin-top: -20px;
       margin-left: -45%;
       ">
-      Start without account
+      {{ 'WELCOME.START.ACCOUNT_NO' | translate }}
     </button>
   </ion-row>
 
@@ -108,7 +108,7 @@
       text-align: center;
       color: grey;
       ">
-      <h4>or</h4>
+      <h4>{{ 'WELCOME.START.OR' | translate }}</h4>
   </div>
 </ion-row>
 
@@ -123,7 +123,7 @@
       margin-top: -20px;
       margin-left: -45%;
       ">
-      Signup or Login
+      {{ 'WELCOME.START.ACCOUNT_YES' | translate }}
     </button>
   </ion-row>
 
