--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -10,10 +10,10 @@
     <!-- <ion-buttons start>
       <button ion-button (click)="addMarker()"><ion-icon name="add"></ion-icon>Add Marker</button>
     </ion-buttons> -->
-    <ion-title>FID Map</ion-title>
+    <ion-title>{{ 'MAP.TITLE' | translate }}</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goBack()">
-        Back
+        {{ 'MAP.BACK' | translate }}
       </button>
     </ion-buttons>
   </ion-navbar>
