--- a/src/pages/send-coins/send-coins.html
+++ b/src/pages/send-coins/send-coins.html
@@ -7,11 +7,11 @@
 <ion-header>
 
   <ion-navbar [ngStyle]="{'background-color': coinColor}">
-    <ion-title *ngIf="!transactionSubmitted">Send FIDs</ion-title>
-    <ion-title *ngIf="transactionSubmitted">Success</ion-title>
+    <ion-title *ngIf="!transactionSubmitted">{{ 'SEND.TITLE' | translate }}</ion-title>
+    <ion-title *ngIf="transactionSubmitted">{{ 'SEND.SUCCESS' | translate }}</ion-title>
     <ion-buttons end>
       <button ion-button (click)="goBack()" *ngIf="!transactionSubmitted">
-        Back
+        {{ 'SEND.BACK' | translate }}
       </button>
       <button ion-button (click)="goBack()" *ngIf="transactionSubmitted">
         Ok
@@ -34,8 +34,8 @@
       'text-align':'center',
       'background-color':'white'
     }">
-      <p *ngIf="!scannedCode" style="margin: 0 0; padding: 3px 0; color: grey">Scan recipient's ID:</p>
-      <p *ngIf="scannedCode" style="margin: 0 0; padding: 3px 0; color: grey">ID scanned successfully</p>
+      <p *ngIf="!scannedCode" style="margin: 0 0; padding: 3px 0; color: grey">{{ 'SEND.SCAN' | translate }}</p>
+      <p *ngIf="scannedCode" style="margin: 0 0; padding: 3px 0; color: grey">{{ 'SEND.SCANNED' | translate }}</p>
     </div>
 
     <ion-row [ngStyle]="{'background-color': 'white'}">
@@ -48,12 +48,12 @@
           'font-size':'10.5px',
           'line-height':'3em'
         }">
-          To:
+          {{ 'SEND.TO' | translate }}
         </ion-label>
       </ion-col>
 
       <ion-col col-9 [ngStyle]="{'position': 'relative'}">
-        <ion-input type="text" placeholder="Recipient ID" [(ngModel)]="scannedCode" [ngStyle]="{
+        <ion-input type="text" placeholder="{{ 'SEND.PLACEHOLDER' | translate }}" [(ngModel)]="scannedCode" [ngStyle]="{
           'position':'absolute',
           'padding' : '0 0',
           'top':'50%',
@@ -103,7 +103,7 @@
       'text-align':'center',
       'background-color':'white'
     }">
-      <p style="margin: 0 0; padding: 3px 0; color: grey">Select amount of {{coinName}}(s) to send:</p>
+      <p style="margin: 0 0; padding: 3px 0; color: grey">{{ 'SEND.AMOUNT_1' | translate }} {{coinName}}(s) {{ 'SEND.AMOUNT_2' | translate }}</p>
     </div>
 
     <ion-row [ngStyle]="{'background-color': 'white'}">
@@ -146,7 +146,7 @@
         'width':'15em',
         'margin-left':'-7.5em'
       }">
-        Send {{coinName}}s!
+        {{ 'SEND.SEND' | translate }} {{coinName}}!
       </button>
     </ion-row>
 
@@ -175,7 +175,7 @@
       margin-left: -40%;
       font-size: 16px;
       color: grey">
-      Congratulations !<br> You sent {{coinAmount}} {{coinName}}s to
+      {{ 'SEND.CONGRATS_1' | translate }} !<br> {{ 'SEND.CONGRATS_2' | translate }} {{coinAmount}} {{coinName}} {{ 'SEND.CONGRATS_3' | translate }}
     </h4>
     </ion-row>
     <ion-row style="
@@ -268,7 +268,7 @@
       height: 50px;
       width: 100%;
       margin-top: 20px;
-      position: relative;" >
+      position: relative;">
     <p style="
       text-align: center;
       position: absolute;
@@ -277,7 +277,7 @@
       margin-left: -40%;
       color: grey;
       font-size: 14px">
-      Transaction submitted successfully.
+      {{ 'SEND.TRANSACTION' | translate }}
     </p>
     </ion-row>
 
